# PhysicsCOLv2

./: .gitignore  CMakeLists.txt  PhysicsCOL.sln  PhysicsCOL.vcxproj  PhysicsCOL.vcxproj.filters  main.cpp
Math/: Math.cpp  Math.h
Physics/Collisions/: Collisions.cpp  Collisions.h
Physics/Entity/: Circle.cpp  Circle.h
Physics/Gravity/: Gravity.cpp  Gravity.h
Physics/Move/: Move.cpp  Move.h
